cmake_minimum_required(VERSION 3.14.7)
project(oqpsk)

find_package(common)
collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES oqpsk.c)
collect (PROJECT_LIB_HEADERS oqpsk.h)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
add_library(oqpsk STATIC ${_sources})
set_target_properties(axidma PROPERTIES LINKER_LANGUAGE C)
